Trigger GitHub Pages rebuild

--- a/folder4/index.html
+++ b/folder4/index.html
@@ -122,5 +122,6 @@
     </section>
 
     <script src="script.js"></script>
+    <!-- Forced update to trigger GitHub Pages rebuild -->
 </body>
 </html>
